--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,19 @@
 <resources>
     <string name="app_name">Converter</string>
+    <string name="from">Из</string>
+    <string name="to">В</string>
 
     <string-array name="items">
         <item>Длина</item>
         <item>Масса</item>
         <item>Температура</item>
         <item>Объем</item>
+        <item>Давление</item>
+        <item>Напряжение</item>
+        <item>Сила тока</item>
+        <item>Сопротивление</item>
+        <item>Плотность</item>
+        <item>Готовка</item>
+        <item>Размер одежды</item>
     </string-array>
 </resources>
